Version 1.12 - July 23 2008
    * Switch to safe creation and overwriting of files
    * Remove claimed bashism from the test script
    * Improve the Win32 reported error codes

Version 1.11 - June 24 2008
    * Resolve oldest reported problem - segfault when private key is needed
      but not available.
    * On Vista, identify (and ignore) symbolic links
    * Do not terminate as soon as an error occures. Continue at next
      reasonable operation.
    * Fix Cygwin, Mac compilation problems
    * Change autoconf to test for the correct stuff for mmap headers
    * Make the error messages in case of file open more useful
    * Spelling corrections in the manual page

Version 1.10 - May 23 2008
    * Add an option "--export-changes" that writes to a log file the files
      affected by the operation in a way suitable for passing to rsync's
      --include-from option
    * Windows - mkdir would still fail if last component of the path to create
      was a drive letter.

Version 1.09 - May 15 2008
    * Fix serious bug - when deleting an entire directory with --name-encrypt
      and --delete-keys, rsyncrypto (since 1.07) would leave a corrupt filemap
      behind.
    * Add a tool "rsyncrypto_recover", which fixes the corruption caused by
      the above bug.

Version 1.08 - May 11 2008
    * Fix bug - when a directory turns into a file with --name-encrypt and
      --delete, rsyncrypto would terminate with an error
    * Make sure that using a preexisting empty filemap does not crash rsyncrypto
    * Fix bug - -d with --filelist with stdin as input created erronous "need
      --no-archive-mode".
    * Fix bug (win32 only) - mkdir error really fixed this time.
    * Fix bug - --ne-nesting would cause --delete and --delete-keys to delete
      the wrong path (and thus fail)

Version 1.07 - May 7 2008
    * Fix bug (Win32) - trying to work cross drive to a drive that is not C:
      would fail the mkdir with an error (Access denied or similar)